[gd_scene load_steps=11 format=3 uid="uid://bp4u2gobv7uiq"]

[ext_resource type="Texture2D" uid="uid://blja3yfetc3ci" path="res://Assets/TextBox.png" id="1_2tsxn"]
[ext_resource type="Script" path="res://Script/dialogue_gui.gd" id="1_bn7qx"]
[ext_resource type="Texture2D" uid="uid://epmcm8wy6c66" path="res://Assets/SampleCharacter.png" id="1_m3w6u"]
[ext_resource type="FontFile" uid="uid://clctmbqnt7im3" path="res://Assets/font/SuperLegendBoy-4w8Y.ttf" id="2_hwjba"]
[ext_resource type="Texture2D" uid="uid://ceu5qa1vya5y2" path="res://Assets/box.png" id="3_ua3xm"]
[ext_resource type="Texture2D" uid="uid://dhgo5lsci2o5x" path="res://Assets/play.png" id="4_56ylw"]

[sub_resource type="LabelSettings" id="LabelSettings_skx6h"]
font = ExtResource("2_hwjba")
font_size = 12
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dt8a1"]
font = ExtResource("2_hwjba")
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_0wu8l"]
resource_name = "fade_out_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pox6n"]
_data = {
"fade_out_white": SubResource("Animation_0wu8l")
}

[node name="DialogueGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bn7qx")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterB" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 559.0
offset_top = -24.0
offset_right = 1152.36
offset_bottom = 648.0
texture = ExtResource("1_m3w6u")
expand_mode = 3

[node name="CharacterA" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -24.0
offset_right = 593.0
offset_bottom = 648.0
texture = ExtResource("1_m3w6u")
expand_mode = 3

[node name="ItemBox" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 473.0
offset_top = 130.0
offset_right = 671.0
offset_bottom = 328.0
texture = ExtResource("3_ua3xm")

[node name="Item" type="TextureRect" parent="ItemBox"]
layout_mode = 0
offset_left = 7.0
offset_top = 19.0
offset_right = 191.0
offset_bottom = 180.0
texture = ExtResource("4_56ylw")

[node name="Dialogue Box" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -445.0
offset_top = -194.0
offset_right = 445.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_2tsxn")
expand_mode = 1

[node name="Name" type="Label" parent="Dialogue Box"]
layout_mode = 0
offset_left = 60.0
offset_top = 68.0
offset_right = 194.0
offset_bottom = 98.0
text = "Name"
label_settings = SubResource("LabelSettings_skx6h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="Dialogue Box"]
layout_mode = 0
offset_left = 216.0
offset_top = 50.0
offset_right = 790.0
offset_bottom = 135.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in accumsan dui. Pellentesque et dapibus mi, ut viverra erat. "
label_settings = SubResource("LabelSettings_dt8a1")
autowrap_mode = 3

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pox6n")
}

[node name="ColorRect" type="ColorRect" parent="Animation"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
